--- a/VersusClickerAT/Config/DefaultEngine.ini
+++ b/VersusClickerAT/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Scenes/TestingScene.TestingScene
+EditorStartupMap=/Game/Scenes/TestingScene.TestingScene
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
