--- a/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=156)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -130,6 +130,7 @@ LastExecutedLaunchName=BEN_DESKTOP
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=156)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -295,6 +296,23 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 BP_MainCamera_C=
 CineCameraComponent=
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+GM_MainGameMode_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+WB_PlayerIcons_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+EdGraph=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+WB_Icon_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers,K2Node_FunctionEntry.Inputs.DB74A163414AD40FC766CE97C112E71B
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+Border=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+WB_PlayerIconDisplay_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+Blueprint=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+ActorRecorderPropertyMap=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+BP_MainPlayerController_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_InputKey=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 
 [EditorStartup]
 LastLevel=/Game/Scenes/TestingScene
@@ -302,7 +320,7 @@ LastLevel=/Game/Scenes/TestingScene
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Comment.CommentColor\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 UserDefinedEnum="\"Object\" "
@@ -443,8 +461,8 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 WP_InputBox_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 EditableTextBox="\"Object\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" \"Object.Appearance.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.TextStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.TextStyle.SelectedBackgroundColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -506,41 +524,60 @@ BP_MainCamera_C=
 CineCameraActor=
 CameraActor=
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" "
 WB_InputBox_C="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WB_Chatbox_C="\"Object\" "
+WB_Chatbox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_EnteredText_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableText="\"Object\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.CaretImage\" \"Object.Appearance.WidgetStyle.CaretImage.TintColor\" \"Object.Appearance.WidgetStyle.CaretImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|SizeBox Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 K2Node_InputKey="\"Object\" "
 K2Node="\"Object\" "
 WB_Raffle_C="\"Object\" "
+K2Node_BreakStruct="\"Object\" "
+K2Node_StructMemberGet="\"Object\" "
+K2Node_StructOperation="\"Object\" "
+K2Node_Variable="\"Object\" "
+GM_MainGameMode_C=
+GameModeBase=
+Info=
+WB_PlayerIcons_C="\"Object\" "
+WB_Icon_C="\"Object\" "
+Border="\"Object\" "
+WB_PlayerIconDisplay_C="\"Object\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
+ActorRecorderPropertyMap="\"Object\" "
+K2Node_MakeStruct="\"Object\" "
+K2Node_StructMemberSet="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/BP_MainPlayerController.BP_MainPlayerController
 OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
-OpenAssetsAtExit=/Game/Enum_GameState.Enum_GameState
+OpenAssetsAtExit=/Game/BP_MainPlayerController.BP_MainPlayerController
 OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Chatbox.WB_Chatbox
-OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Raffle.WB_Raffle
+OpenAssetsAtExit=/Game/UI/GeneralUI/WB_PlayerIconDisplay.WB_PlayerIconDisplay
+OpenAssetsAtExit=/Game/UI/GeneralUI/WB_Icon.WB_Icon
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1380,7 +1417,7 @@ CanvasPanel.Localization=True
 BP_MainPlayerController_C.Default=True
 Image.Layout=True
 Image.Appearance=True
-Image.Accessibility=True
+Image.Accessibility=False
 Image.Behavior=True
 Image.Render Transform=True
 Image.Performance=True
@@ -1491,6 +1528,72 @@ WB_Raffle_C.Render Transform=True
 WB_Raffle_C.Rendering=True
 WB_Raffle_C.Navigation=True
 WB_Raffle_C.Localization=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+GM_MainGameMode_C.Default=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+HorizontalBox.Layout=True
+WB_Icon_C.Appearance=True
+WB_Icon_C.Input=True
+WB_Icon_C.Interaction=True
+WB_Icon_C.Designer=True
+WB_Icon_C.Performance=True
+WB_Icon_C.Layout=True
+WB_Icon_C.Behavior=True
+WB_Icon_C.Render Transform=True
+WB_Icon_C.Localization=True
+WB_Icon_C.Accessibility=True
+WB_Icon_C.Rendering=True
+WB_Icon_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+WB_Icon_C.Default=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+WB_PlayerIconDisplay_C.Appearance=True
+WB_PlayerIconDisplay_C.Input=True
+WB_PlayerIconDisplay_C.Interaction=True
+WB_PlayerIconDisplay_C.Designer=True
+WB_PlayerIconDisplay_C.Performance=True
+WB_PlayerIconDisplay_C.Layout=True
+WB_PlayerIconDisplay_C.Behavior=True
+WB_PlayerIconDisplay_C.Render Transform=True
+WB_PlayerIconDisplay_C.Localization=True
+WB_PlayerIconDisplay_C.Accessibility=True
+WB_PlayerIconDisplay_C.Rendering=True
+WB_PlayerIconDisplay_C.Navigation=True
+PanelWidget.Behavior=True
+PanelWidget.Accessibility=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Rendering=True
+PanelWidget.Navigation=True
+PanelWidget.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Rendering=True
+Widget.Navigation=True
+Widget.Localization=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+K2Node_MakeStruct.PinOptions=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1531,7 +1634,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/UI/GeneralUI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1540,16 +1643,19 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/ViewerExclusive/WB_Raffle
-MRUItem1=/Game/UI/ViewerExclusive/WB_Chatbox
-MRUItem2=/Game/Enum_GameState
-MRUItem3=/Game/GM_MainGameMode
-MRUItem4=/Game/BP_MainPlayerController
-MRUItem5=/Game/UI/ViewerExclusive/WB_EnteredText
-MRUItem6=/Game/BP_MainCamera
-MRUItem7=/Game/Scenes/TestingScene
-MRUItem8=/Game/GameElements/BP_Cube
-MRUItem9=/Game/Input/MC_Viewer
+MRUItem0=/Game/UI/GeneralUI/WB_Icon
+MRUItem1=/Game/UI/GeneralUI/WB_PlayerIconDisplay
+MRUItem2=/Game/UI/ViewerExclusive/WB_Chatbox
+MRUItem3=/Game/BP_MainPlayerController
+MRUItem4=/Game/GM_MainGameMode
+MRUItem5=/Game/STRUCT_Viewer
+MRUItem6=/Game/UI/ViewerExclusive/WB_Raffle
+MRUItem7=/Game/Enum_GameState
+MRUItem8=/Game/UI/ViewerExclusive/WB_EnteredText
+MRUItem9=/Game/BP_MainCamera
+MRUItem10=/Game/Scenes/TestingScene
+MRUItem11=/Game/GameElements/BP_Cube
+MRUItem12=/Game/Input/MC_Viewer
 
 [AssetEditorToolkitTabLocation]
 /Game/ENUM_GameStates.ENUM_GameStates=1
@@ -1567,6 +1673,9 @@ MRUItem9=/Game/Input/MC_Viewer
 /Game/UI/ViewerExclusive/WB_EnteredText.WB_EnteredText=0
 /Game/Enum_GameState.Enum_GameState=0
 /Game/UI/ViewerExclusive/WB_Raffle.WB_Raffle=0
+/Game/STRUCT_Viewer.STRUCT_Viewer=0
+/Game/UI/GeneralUI/WB_PlayerIconDisplay.WB_PlayerIconDisplay=0
+/Game/UI/GeneralUI/WB_Icon.WB_Icon=0
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -1722,7 +1831,7 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=-11.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2908,10 +3017,11 @@ WmfMediaSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteConfirmationVariable_Warning=False
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
 
 [MessageLog]
-LastLogListing=AssetCheck
+LastLogListing=BlueprintLog
 
