--- a/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -297,7 +297,7 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 BP_MainCamera_C=
 CineCameraComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
-GM_MainGameMode_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+GM_MainGameMode_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 WB_PlayerIcons_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
@@ -313,6 +313,7 @@ Blueprint=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet
 ActorRecorderPropertyMap=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 BP_MainPlayerController_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 K2Node_InputKey=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+Widget=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 
 [EditorStartup]
 LastLevel=/Game/Scenes/TestingScene
@@ -320,7 +321,7 @@ LastLevel=/Game/Scenes/TestingScene
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Comment.CommentColor\" "
+Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 UserDefinedEnum="\"Object\" "
@@ -560,10 +561,10 @@ K2Node_StructMemberSet="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -574,10 +575,6 @@ RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
-OpenAssetsAtExit=/Game/BP_MainPlayerController.BP_MainPlayerController
-OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Chatbox.WB_Chatbox
-OpenAssetsAtExit=/Game/UI/GeneralUI/WB_PlayerIconDisplay.WB_PlayerIconDisplay
-OpenAssetsAtExit=/Game/UI/GeneralUI/WB_Icon.WB_Icon
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1643,11 +1640,11 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/GeneralUI/WB_Icon
-MRUItem1=/Game/UI/GeneralUI/WB_PlayerIconDisplay
-MRUItem2=/Game/UI/ViewerExclusive/WB_Chatbox
-MRUItem3=/Game/BP_MainPlayerController
-MRUItem4=/Game/GM_MainGameMode
+MRUItem0=/Game/GM_MainGameMode
+MRUItem1=/Game/UI/GeneralUI/WB_Icon
+MRUItem2=/Game/UI/GeneralUI/WB_PlayerIconDisplay
+MRUItem3=/Game/UI/ViewerExclusive/WB_Chatbox
+MRUItem4=/Game/BP_MainPlayerController
 MRUItem5=/Game/STRUCT_Viewer
 MRUItem6=/Game/UI/ViewerExclusive/WB_Raffle
 MRUItem7=/Game/Enum_GameState
@@ -1831,7 +1828,7 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [RootWindow]
-ScreenPosition=X=-11.000 Y=0.000
+ScreenPosition=X=317.000 Y=153.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
