--- a/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -320,6 +320,9 @@ K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_V
 WB_Raffle_C=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 Image=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 TextBlock=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+EnterRaffle=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
+EnterRaffle_4=PropertyWrapper.DefaultValueCategory.ExamplePlayers,K2Node_VariableGet.DefaultValueCategory.ExamplePlayers
 
 [EditorStartup]
 LastLevel=/Game/Scenes/TestingScene
@@ -327,7 +330,7 @@ LastLevel=/Game/Scenes/TestingScene
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 UserDefinedEnum="\"Object\" "
@@ -468,8 +471,8 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 WP_InputBox_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageNormal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageHovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageFocused.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageReadOnly.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" \"Object.Appearance.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.TextStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.TextStyle.SelectedBackgroundColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.HighlightShape.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.TintColor\" \"Object.Appearance.WidgetStyle.TextStyle.UnderlineBrush.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HorizontalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.HoveredThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBackgroundImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalBottomSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.VerticalTopSlotImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.NormalThumbImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.TintColor\" \"Object.Appearance.WidgetStyle.ScrollBarStyle.DraggedThumbImage.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -533,17 +536,17 @@ CameraActor=
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_InputBox_C="\"Object\" "
-Image="\"Object\" "
+Image="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_Chatbox_C="\"Object\" "
 WB_EnteredText_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object\" "
-TextLayoutWidget="\"Object\" "
+TextBlock="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EditableText="\"Object\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.Font.OutlineSettings\" \"Object.Appearance.WidgetStyle.ColorAndOpacity\" \"Object.Appearance.WidgetStyle.CaretImage\" \"Object.Appearance.WidgetStyle.CaretImage.TintColor\" \"Object.Appearance.WidgetStyle.CaretImage.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageSelected.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.Margin\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.TintColor\" \"Object.Appearance.WidgetStyle.BackgroundImageComposing.OutlineSettings.Color\" \"Object.Behavior.VirtualKeyboardOptions\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|SizeBox Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 K2Node_InputKey="\"Object\" "
 K2Node="\"Object\" "
 WB_Raffle_C="\"Object\" "
@@ -567,11 +570,11 @@ K2Node_StructMemberSet="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -581,11 +584,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Chatbox.WB_Chatbox
-OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
 OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Raffle.WB_Raffle
+OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
 OpenAssetsAtExit=/Game/BP_MainPlayerController.BP_MainPlayerController
-OpenAssetsAtExit=/Game/UI/ViewerExclusive/ENUM_RaffleState.ENUM_RaffleState
+OpenAssetsAtExit=/Game/UI/ViewerExclusive/WB_Chatbox.WB_Chatbox
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1602,6 +1604,9 @@ Blueprint.BlueprintOptions=True
 Blueprint.Imports=True
 Blueprint.Interfaces=True
 K2Node_MakeStruct.PinOptions=True
+UMGEditorProjectSettings.Designer =True
+WB_Raffle_C.Default=True
+WB_Raffle_C.Layout=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1651,11 +1656,11 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/ViewerExclusive/ENUM_RaffleState
+MRUItem0=/Game/UI/ViewerExclusive/WB_Chatbox
 MRUItem1=/Game/BP_MainPlayerController
-MRUItem2=/Game/UI/ViewerExclusive/WB_Raffle
-MRUItem3=/Game/GM_MainGameMode
-MRUItem4=/Game/UI/ViewerExclusive/WB_Chatbox
+MRUItem2=/Game/GM_MainGameMode
+MRUItem3=/Game/UI/ViewerExclusive/WB_Raffle
+MRUItem4=/Game/UI/ViewerExclusive/ENUM_RaffleState
 MRUItem5=/Game/UI/GeneralUI/WB_Icon
 MRUItem6=/Game/UI/GeneralUI/WB_PlayerIconDisplay
 MRUItem7=/Game/STRUCT_Viewer
@@ -3034,4 +3039,7 @@ InstalledPlugins=WMFCodecs
 
 [MessageLog]
 LastLogListing=BlueprintLog
+
+[InputDebuggingEditor]
+SuppressInputDeviceConnectionChangeNotification=True
 
