Fixed full UI shift for camera
- Limiting cube clicking to just streamer perspective
- Added Game instance to have global control of player data

--- a/VersusClickerAT/Config/DefaultEngine.ini
+++ b/VersusClickerAT/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Scenes/TestingScene.TestingScene
 EditorStartupMap=/Game/Scenes/TestingScene.TestingScene
+GlobalDefaultGameMode=/Game/GM_MainGameMode.GM_MainGameMode_C
+GameInstanceClass=/Game/UI/BP_StreamerDataGI.BP_StreamerDataGI_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
