Created Upgrade Buttons
- Upgrade Buttons added
- Data sets added to handle thier functionality and upgrade curves. Currently they do not effect gameplay though

--- a/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VersusClickerAT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -607,6 +607,7 @@ WB_ViewerPerspective_C="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -624,6 +625,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/GM_MainGameMode.GM_MainGameMode
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1776,7 +1778,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1805,24 +1807,25 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/GameData/BP_StreamerDataGI
-MRUItem1=/Game/UI/ViewerExclusive/WB_Raffle
-MRUItem2=/Game/UI/ViewerExclusive/WB_ViewerPerspective
-MRUItem3=/Game/UI/GeneralUI/WB_UpgradeButtons
-MRUItem4=/Game/UI/GeneralUI/WB_PlayerScore
-MRUItem5=/Game/UI/GeneralUI/WB_StreamerHUD
-MRUItem6=/Game/GameData/STRUCT_Viewer
-MRUItem7=/Game/UI/ViewerExclusive/WB_Chatbox
-MRUItem8=/Game/UI/ViewerExclusive/WB_ViewerHUD
-MRUItem9=/Game/BPC_RaffleHandling
-MRUItem10=/Game/BP_MainPlayerController
-MRUItem11=/Game/UI/GeneralUI/WB_Icon
-MRUItem12=/Game/UI/GeneralUI/WB_PlayerIconDisplay
-MRUItem13=/Game/UI/ViewerExclusive/WB_EnteredText
-MRUItem14=/Game/BP_MainCamera
-MRUItem15=/Game/Scenes/TestingScene
-MRUItem16=/Game/GameElements/BP_Cube
-MRUItem17=/Game/Input/MC_Viewer
+MRUItem0=/Game/GM_MainGameMode
+MRUItem1=/Game/GameData/BP_StreamerDataGI
+MRUItem2=/Game/UI/ViewerExclusive/WB_Raffle
+MRUItem3=/Game/UI/ViewerExclusive/WB_ViewerPerspective
+MRUItem4=/Game/UI/GeneralUI/WB_UpgradeButtons
+MRUItem5=/Game/UI/GeneralUI/WB_PlayerScore
+MRUItem6=/Game/UI/GeneralUI/WB_StreamerHUD
+MRUItem7=/Game/GameData/STRUCT_Viewer
+MRUItem8=/Game/UI/ViewerExclusive/WB_Chatbox
+MRUItem9=/Game/UI/ViewerExclusive/WB_ViewerHUD
+MRUItem10=/Game/BPC_RaffleHandling
+MRUItem11=/Game/BP_MainPlayerController
+MRUItem12=/Game/UI/GeneralUI/WB_Icon
+MRUItem13=/Game/UI/GeneralUI/WB_PlayerIconDisplay
+MRUItem14=/Game/UI/ViewerExclusive/WB_EnteredText
+MRUItem15=/Game/BP_MainCamera
+MRUItem16=/Game/Scenes/TestingScene
+MRUItem17=/Game/GameElements/BP_Cube
+MRUItem18=/Game/Input/MC_Viewer
 
 [AssetEditorToolkitTabLocation]
 /Game/ENUM_GameStates.ENUM_GameStates=1
